gcc/testsuite/gdc.test/fail_compilation/imports/a14407.d
module imports.a14407;

deprecated class C
{
    private deprecated new (size_t, string)
    {
        return null;
    }
    private this(int) {}
}

deprecated struct S
{
    private deprecated new (size_t, string)
    {
        return null;
    }
    private this(int) {}
}
